--- a/_posts/2018-03-23-LK-stuffs.md
+++ b/_posts/2018-03-23-LK-stuffs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: LK memory leak
+title: LK v4.16.x - kaslr bypass (memleak)
 comments: true
 ---
 
@@ -18,6 +18,6 @@ Except this, there're some bugs, also memleak. But i didn't make them into usefu
 
 ## Demo Screen...
 
-[leak](/images/poc_0.jpeg)
+![leak](/images/poc_0.jpeg)
 
 **End**
