--- a/_posts/2020-02-02-SinGAN.md
+++ b/_posts/2020-02-02-SinGAN.md
@@ -110,9 +110,46 @@ real image 와 (x_n) fake image (~x_n) 를 구분.
 
 이 convention 으로 5 층을 쌓았네요.
 
-처음엔 32 kernel 
+처음 (coarsest scale) 엔 32 kernels / block 으로 시작을 하고 4 scales 마다 kernel 을 2 배 늘려 주었다고 합니다.
+
+이렇게 해 준 이유는 (상대적으로 light 한 구조여서), 
+
+주로 generator 의 capacity 가 커지면 training image 를 외어버리는 경우가 생기는데, 이를 방지하려고 light 하게 설계를 한 것 같습니다.
+
+또한 fully-convolutional 하게 설계를 한 이유는, arbitrary image size 에도 training / inference 가 가능하게끔 하려고 라고 설명을 합니다.
+
+### GAN training
+
+이 부분이 이제 GAN을 학습하는데 있어서 제일 중요한 부분인데, 딱히 특별한 부분은 없습니다.
+
+#### loss function
+loss 는 adversarial loss + reconstruction loss 로 이뤄졌고
+
+```python
+total_loss = adv_loss + alpha * rec_loss
+```
+
+##### Adversarial loss
+WGAN-GP loss 사용 했고. 논문에 보면, 다른 texture single image GAN 과 다르게, patch 별이 아닌 전체 이미지에 대한 
+loss 를 사용했더니 네트워크가 boundary conditions (SM) 를 학습할 수 있었다고 합니다.
+
+#### Reconstruction loss
+l2 loss 를 사용. 각 stage 에서의 rec loss 를 다음과 같이 정의가 가능한데,
+```python
+rec_loss_n = l2_loss(G_n(0, (~x_n+1)), x_n)
+```
+또한 ~x_n 의 역할이 하나 더 있는데, stage n 에서의 noise z_n 에 대한 std 값을 결정하는데 쓰여요.
+~x_n+1 하고 x_n 의 RMSE 값을 구해서 각 scale 에 얼마만큼 더해야 하는지를 알려주는 정도로 사용된다고 합니다.
+
+또 중요한 부분은 noise 를 넣어줄 때, 첫 단계에만 fixed noise 로 넣어주고 다른 단계에서는 noise 를 따로 만들어 주지 않았는데,
+image pixel difference 를 줄이려는 것에 focus 를 하려고 이렇게 했다고 캅니다.
 
 ## Experiment Result
+총 2 가지 method 로 측정을 했습니다.
+
+### 정략적인
+
+### 정성적인
 
 ## Conclusion
 
