Update SinGAN review

--- a/_posts/2020-02-02-SinGAN.md
+++ b/_posts/2020-02-02-SinGAN.md
@@ -145,12 +145,89 @@ rec_loss_n = l2_loss(G_n(0, (~x_n+1)), x_n)
 image pixel difference 를 줄이려는 것에 focus 를 하려고 이렇게 했다고 캅니다.
 
 ## Experiment Result
-총 2 가지 method 로 측정을 했습니다.
 
-### 정략적인
+### 정량적인
+총 2 가지의 정략적인 방법을 사용했는데,
+
+1. Amazon Mechanical Turk (AMT) 
+2. Single Image Frechet Inception Distance (SIFID)
+
+요즘 GAN paper 들에서 자주 사용하는 metric 들입니다.
+
+#### AMT
+AMT 는 사람들에게 직접 답을 하게 해서 결과를 매기는 서비스입니다.
+여기서는 해당 이미지가 Fake 인지 Real 인지를 구별하게 하는 투표 방식을 사용했습니다.
+
+여기선 2 가지 방식으로 조사를 하였는데,
+
+1. 실제 이미지와 SinGAN 이 생성한 이미지를 보여주고 어느 쪽이 가짜인지 맞히는 Paired 실험
+2. 둘 중 하나만 보여주고 얼마나 헷갈렸는지를 물어보는 Unpaired 실험
+
+실험 조건은, 각 실험 당 1 초의 시간에 1 명당 50 장의 image 를 보여주었답니다.
+
+생성한 이미지는 stage N, N - 1 에서 생성한 이미지들을 주었다는데, (논문에선 N -2 까지)
+* stage N 은 noise 로 부터 생성한 이미지고
+* stage N - 1 은 진짜 이미지를 축소해서 G_N-1 에 넣어주는 방식인
+
+이런 실험에선 노이즈로 부터 생성할 때와 진짜 이미지 기반으로 생성할 때의 차이를 볼 수 있는데,
+
+![img](../assets/SinGAN/generate_from_different_scales.png)
+
+실험 결과를 보면, stage N, 노이즈로 부터 생성한 것은 원본과는 많이 다른 결과를 가져올 수 있고,
+stage N - 1, N - 2 는 원본 형태 유지는 되고, N - 2 같은 경우엔 texture 가 더 원본 같다는 것도 확인 할 수 있습니다.
+
+하지만, 원본 object 의 배열을 유지한 상태에서 다양성을 보장하기엔 stage N - 1 결과물이 제일 좋다고 판단이 가능하네요.
+AMT perceptual study 결과도 N - 1 stage 일 때가 가장 좋습니다.
+
+재밌는 점은 stage N - 1 일 때, **confusion 이 47 %** 인데, 사람이 보기에도 정말 헷갈리나 보네요.
+
+#### SIFID
+기존 FID 를 Single Image 에 맞게 변형해서 SIFID metric 을 제안해서 사용합니다.
+
+각 scale 별 SIFID 를 측정하고 AMT 에서 Survey 한 결과하고 (Paired, UnPaired) correlation 를 측정해서 유의미한 metric 임을 증명하네요.
+
+요 부분은 논문 6 ~ 7 페이지에 나와있는데, 여길 참고하세용 (~~귀찮아~~)
 
 ### 정성적인
+총 5 개의 application 예시를 보여주고 있는데,
+
+#### Single Image Super Resolution (SISR)
+결과 비교를 위해 
+internal method 인 Deep Image Prior (DIP), Zero-Shot Super Resolution (ZSSR)
+external method 인 SRGAN, EDSR 와 결과를 비교했습니다.
+
+![img](../assets/SinGAN/sisr_result.png)
+
+(distortion quality 인 RMSE 가 낮을 수록 좋고, Perceptual Quality 인 NIQE 가 높을 수록 좋음)
+
+다른 Internal Method 에 비해 RMSE 는 높지만, external method 인 SRGAN 과 NIQE 값은 comparable 합니다.
+
+1 장의 이미지만 사용해서 이 정도 결과라서 정말 신기하네. 개인적으론 PSNR 같은 다른 metric 하고 모델 들도 넣어줬으면 좋을 것 같네요.
+
+#### Paint-To-Image Style Transfer
+Paint Image 로 부터 생성하는 style transfer 실험인데, quality 가 꽤괜입니다.
+
+![img](../assets/SinGAN/paint_to_image_style_transfer_result.png)
+
+#### Editing
+원본 이미지에 일부 영역들을 임의의 무언가로 넣으면 이 친구가 얼마나 자연스럽게 만들어 주는지 확인 해 주는 task 인데,
+이것도 꽤 재밌는 결과를 보이네요.
+
+아래 이미지에서 *Content Aware Move* 가 포토샵 기능인데, 이 것보다 잘하는 거 같네요
+
+![img](../assets/SinGAN/editing_result.png)
+
+#### Harmonization
+Image 2 장을 합쳤을 때 조화롭게 잘 합쳐주는 지를 보는 task 인데, 이것도 꽤 자연스럽게 잘 되는 것 같아요
+
+![img](../assets/SinGAN/harmonization_result.png)
+
+#### Single Image Animation
+한 장의 이미지를 넣어주면 짧은 video clip 을 만들어 주는 task 인데, 이 것도 자연스럽게 잘 되는 것 같네요
+
+[video](https://www.youtube.com/watch?v=xk8bWLZk4DU&feature=youtu.be)
 
 ## Conclusion
 
-이번에 SinGAN 이란 
+이번에 SinGAN paper review 를 해 보았는데, 뭔가 특별한 architecture 나 제안은 아니였지만,
+이미지 한 장만 사용한다는 점과 Application 들이 정말 좋았던 paper 였어요.
