Update SinGAN review

--- a/_posts/2020-02-02-SinGAN.md
+++ b/_posts/2020-02-02-SinGAN.md
@@ -2,8 +2,8 @@
 layout: post
 title: SinGAN - Learning a Generative Model from a Single Natural Image paper review
 author: kozistr
-categories: deep learning
-tags: GAN, Deep Learning, SinGAN
+categories: deep-learning
+tags: GAN, DeepLearning, SinGAN
 ---
 
 posted by [kozistr](http://kozistr.tech)
