Update the article

--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -17,7 +17,7 @@ posted by [kozistr](http://kozistr.tech)
 
 아래는 StarGAN v2 demo 인데, 아래와 같은 느낌입니다.
 
-![gif](../assets/StarGANv2/celeba_hq_teaser_video.gif)
+![gif](/assets/StarGANv2/celeba_hq_teaser_video.gif)
 
 paper : [arXiv](https://arxiv.org/pdf/1912.01865.pdf)
 
@@ -57,7 +57,7 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 먼저 아래는 StarGAN v2 architecture 간단한 overview 인데, 
 아래 목적을 간단하게 설명하면 *image x* 와 *image y* 가 있다면, Generator 로 *image x* 에 대응되는 *image y* 의 각 domain 의 다양한 이미지들을 생성하는 겁니다.
 
-![img](../assets/StarGANv2/overview_of_starganv2.png)
+![img](/assets/StarGANv2/overview_of_starganv2.png)
 
 각 Network 들의 역할을 알아보면 다음과 같아요.
 
@@ -65,7 +65,7 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 *image x* 가 입력으로 들어오고 중간에 *domain-specific style code s* vector 가 들어와서 output image 를 만듭니다.
 
-> *output image = G(x, s)*
+> *$output image = G(x, s)$*
 
 여기서 *s* 는 *mapping network* 나 *style encoder* 에서 만들어진 *style vector* 입니다.
 
@@ -75,7 +75,7 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 *mapping network*, *F* 는 *latent code z* 와 *domain y* 에 대해서, *style code*를 만드는 network 인데, 대충 공식은 이렇게 됩니다.
 
-> *s = F_y(z)*
+> *$s = F_y(z)$*
 
 즉, *domain y* 를 represent 하는 *latent code z* 를 *style code s* 로 mapping 해 주는 역할을 합니다.
 
@@ -85,7 +85,7 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 *image x* 와 *domain y*가 있다면 *E* 는 *image x* 에서 style information 을 추출하는 역할을 해요.
 
-> *s = E_y(x)*
+> *$s = E_y(x)$*
 
 *E* 는 reference image 에 대해서 다양한 style code 들을 생성하는 역할을 해요. 이렇게 생성된 style code 들을 *G* 에서 이미지를 생성할 때 사용됩니다.
 
