Update StarGANv2 review

--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -65,7 +65,7 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 *image x* 가 입력으로 들어오고 중간에 *domain-specific style code s* vector 가 들어와서 output image 를 만듭니다.
 
-> *$output image = G(x, s)$*
+> *$output-image = G(x, s)$*
 
 여기서 *s* 는 *mapping network* 나 *style encoder* 에서 만들어진 *style vector* 입니다.
 
@@ -99,7 +99,9 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 ### Adversarial Loss
 
-L_adv = 
+GAN loss 같은 경우엔 vanila gan loss 를 사용했는데, 수식은 많이 보던 수식 입니다.
+
+> $L_adv = E_x,y[log D_y(x)] + E_x,y^~,z[log (1 - D_y^~(G(x, s^~)))]$
 
 ## Experiment Result
 
