Update StarGANv2 review

--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -99,9 +99,13 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 ### Adversarial Loss
 
-GAN loss 같은 경우엔 vanila gan loss 를 사용했는데, 수식은 많이 보던 수식 입니다.
+GAN loss 같은 경우엔 WGAN, WGAN-GP, hinge-loss based gan loss 가 아닌 vanila gan loss 를 사용했네요.
 
-> $L_adv = E_x,y[log D_y(x)] + E_x,y^~,z[log (1 - D_y^~(G(x, s^~)))]$
+> $L_adv = \E_(x,y)[log D_y(x)] + \E_(x,y\hat~,z)[log (1 - D_y\hat~(G(x, s\hat~)))]$
+
+### Reconstruction Loss
+
+
 
 ## Experiment Result
 
