Update StarGANv2 review

--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -101,13 +101,50 @@ RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 GAN loss 같은 경우엔 WGAN, WGAN-GP, hinge-loss based gan loss 가 아닌 vanila gan loss 를 사용했네요.
 
-> $L_adv = \E_(x,y)[log D_y(x)] + \E_(x,y\hat~,z)[log (1 - D_y\hat~(G(x, s\hat~)))]$
+> $L_adv = \E_x,y[log D_y(x)] + \E_(x,y\hat{~},z)[log (1 - D_y\hat~(G(x, s\hat~)))]$
 
-### Reconstruction Loss
+### Style Reconstruction Loss
 
+*style code* 를 training 하기 위해서, *l1 loss* 를 사용합니다. 다른 특별한 점은 없네요.
 
+논문에서는 이전 논문에선 multi-domains 들을 위해서 *multi-encoders*를 사용했다면, 우리 method 는 *단 한개* 의 encoder 를 사용했다고,
+큰 차이점이라 언급합니다.
+
+> $L_sty = E_x,y^~,z[||s^~ - E_y^~(G(x, s^~))||_1]$
+
+### Style Diversification Loss
+
+style 다양성을 위해선 *diversity sensitive* 한 loss 로 generator 를 regularize 해야 한다고 합니다.
+
+random latent code $z_1$, $z_2$ 에서 생성 된 $s_1^~$, $s_2^~$ 들을 (굳이 수식으로 쓰면 아래와 같음)
+*image x* 와 *G* 로 생성한 *output* 들의 *l1 loss* 를 구합니다.
+
+> $s_i^~ = F_y^~(z_i), i \in {1, 2}$
+
+> $L_ds = E_x,y^~,z_1,z_2[||G(x, s_1^~) - G(x, s_2^~)||_1]$
+
+논문에선 이 loss 의 *optimal point* 는 존재하지 않아서, *$L_ds$* 의 loss weight 를 0 까지 linearly decay 시킨다고 합니다.
+
+### Preserving Source Characteristics
+
+위의 loss 들만으로는 생성물이 어떤 결과물이여야 하는지를 preserve 하지 못하는데, 
+결과물은 반드시 *domain-invariant* 한 특성을 가지고 있어야 합니다. 이걸 잘 하는게 목표니까요!
+
+이 부분을 해결하기 위해선 여러 task 에서 사용하고 있는 공식 loss 인 *cycle consistency loss* 를 쓰죠.
+
+> $L_cyc = E_x,y,y^~,z[||x - G(G(x, s^~), s^)||_1]$
+> $s^ = E_y(x)$
+
+### Total Loss
+
+총 4 가지 type 의 loss 를 사용해서 아래와 같습니다.
+
+> $L_D = - L_adv$
+> $L_F,G,E = L_adv + \lambda_sty * L_sty - \lambda_ds * L_ds + \lambda_cyc * L_cyc$
 
 ## Experiment Result
+
+### Improvements form StarGAN
 
 ### 정량적인
 
