Update the StarGANv2

--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -105,10 +105,8 @@ GAN loss 같은 경우엔 WGAN, WGAN-GP, hinge-loss based gan loss 가 아닌 va
 
 ### Style Reconstruction Loss
 
-*style code* 를 training 하기 위해서, *l1 loss* 를 사용합니다. 다른 특별한 점은 없네요.
-
-논문에서는 이전 논문에선 multi-domains 들을 위해서 *multi-encoders*를 사용했다면, 우리 method 는 *단 한개* 의 encoder 를 사용했다고,
-큰 차이점이라 언급합니다.
+*style code* 를 training 하기 위해서, *l1 loss* 를 사용합니다. 
+loss 에 다른 특별한 점은 없지만 하나의 Encoder 로 multiple domains 들의 feature 를 추출한다는 게 큰 특징/차이가 되겠네요.
 
 > $L_{sty} = E_{x,\tilde{y},z}[\|\tilde{s} - E_{\tilde{y}}(G(x, \tilde{s}))\|_1]$
 
