--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -223,11 +223,11 @@ dataset 은 *CelebA-HQ* 와 *AFHQ* 를 사용했답니다.
 각 dataset 의 real images 의 FID 는 **15.1** / **13.1** 인 수준입니다. 
 이전 method 들 보다 성능이 훨씬 좋고 (x2, x3.5) 거의 실사 이미지와 비슷하다고 볼 수 있죠
 
-[!img](/assets/StarGANv2/reference-guided-synthesis-on-datasets.png)
+![img](/assets/StarGANv2/reference-guided-synthesis-on-datasets.png)
 
 아래는 CelebA-HQ 로 트레이닝을 하고 FFHQ 로 inference 한 결과물인데, dataset 에 distribution gap 이 있을 텐데도 reference image 의 style 을 잘 잡네요.
 
-[!img](/assets/StarGANv2/reference-guided-synthesis.png)
+![img](/assets/StarGANv2/reference-guided-synthesis.png)
 
 ### 정성적인
 
