--- a/_posts/2020-02-29-StyleGANv2.md
+++ b/_posts/2020-02-29-StyleGANv2.md
@@ -119,7 +119,7 @@ StyleGAN 의 **controllability** 를 잃어 버리게 됐답니다.
 들어오는 style 에 의해서 (위 그림에서 A) *modulation* 각 convolution 의 feature map 을 scale 하는데,
 이 부분을 아래처럼 구현이 가능 합니다.
 
-> *$w`_{i,j,k} = s_i * w_{i,j,k}$*
+> *$w`_{i,j,k} = s_i \cdot w_{i,j,k}$*
 
 $w$ 는 일반 weight 이고, $w`$ 이 modulated weight, $s$ 는 scale 인데, $i$ 번째 input feature map, $j,k$ 는 output feature map 에 해당. 
 
