--- a/_posts/2020-02-29-StyleGANv2.md
+++ b/_posts/2020-02-29-StyleGANv2.md
@@ -144,6 +144,12 @@ training technique 들도 몇 개 소개되었는데, 그렇게 여러 기술들
 3. Path Length Regularization : poor local conditioning 을 피해기 위한 method 인데, Jacobian Matric 연산의 heaviness 를 해결하기 위해 identity 등을 사용 하는 등 이야기가 논문에 나옵니다.
 결론적으로, 조금 더 reliable 하고 consistently 동작하는 모델이 됐다고 캅니다.
 
+> *$E_{x,y~N(0, I)}(\|J^T_wy\|_2 - \alpha)$*
+
+*$J_w$* 가 orthogonal matrix 니, 이런 matrix 는 lengths 를 보존하겠죠? (어떤 dimension 에 대해서 squeezing 없고)
+
+constant *$\alpha$* 가 training 중 path lengths 의 exponential moving average 값을 optimize 되게 해 줍니다
+
 ## Experiment Result
 
 FFHQ / LSUN Car dataset 에서 퍼포먼스는 아래와 같아요. 총 4가지 metrics 을 사용해서 evaluate 했습니다.
