--- a/_posts/2020-02-29-StyleGANv2.md
+++ b/_posts/2020-02-29-StyleGANv2.md
@@ -144,7 +144,7 @@ training technique 들도 몇 개 소개되었는데, 그렇게 여러 기술들
 3. Path Length Regularization : poor local conditioning 을 피해기 위한 method 인데, Jacobian Matric 연산의 heaviness 를 해결하기 위해 identity 등을 사용 하는 등 이야기가 논문에 나옵니다.
 결론적으로, 조금 더 reliable 하고 consistently 동작하는 모델이 됐다고 캅니다.
 
-> *$E_{x,y~N(0, I)}(\|J^T_wy\|_2 - \alpha)$*
+> *$E_{x,y~N(0, I)}(\||J^T_wy\|\|_2 - \alpha)^2$*
 
 *$J_w$* 가 orthogonal matrix 니, 이런 matrix 는 lengths 를 보존하겠죠? (어떤 dimension 에 대해서 squeezing 없고)
 
