Update the review

--- a/_posts/2020-03-14-SAN.md
+++ b/_posts/2020-03-14-SAN.md
@@ -58,17 +58,28 @@ official implementation : [code](https://github.com/daitao/SAN)
 
 논문에서 자기들은 shallow feature extraction 을 위해서 LR (Low Resolution) 이미지로 부터 오직 convolution layer 1 층만 쌓았다고 합니다.
 
+그냥 평범한 convolution2d 하나입니다.
 
-###  SOCA (Second Order Channel Attention) Module
+### non-locally enhanced residual group (NLRG)
 
+*MLRG* module 은 크게 2 가지로 구성되어 있는데,
 
+1. 여러 개의 region-level non-local (RL-NL)
+2. 하나의 share-source residual group (SSRG)
 
-### NLRG (Non-Locally enhanced Residual Group) Module
+#### RL-NL
 
+논문에서 RL-NL Module 은 *LR* 에서 구조적인 feature 들을 잘 따내고, *HR* 의 nature-scene 의 self-similarities 도 
+잘 가져올 거라고 합니다.
 
-### LSRAG (Local-Source Residual Attention Group) Module
+#### SSRG
 
+*SSRG* 는 Local Source Residual Attention Group (LSRAG) 들이 share-source skip connection (SSC) 로 구성 되어 있습니다.
 
+                             
+### up-scale module
+
+### reconstruction part
 
 ## Experiment Result
 
