Update the review

--- a/_posts/2020-03-14-SAN.md
+++ b/_posts/2020-03-14-SAN.md
@@ -72,11 +72,14 @@ official implementation : [code](https://github.com/daitao/SAN)
 논문에서 RL-NL Module 은 *LR* 에서 구조적인 feature 들을 잘 따내고, *HR* 의 nature-scene 의 self-similarities 도 
 잘 가져올 거라고 합니다.
 
+구조는 channel-wise 한 self-attention network 가 residual 하게 연결되어 있는 구조입니다. (위 그림 참고)
+
 #### SSRG
 
 *SSRG* 는 Local Source Residual Attention Group (LSRAG) 들이 share-source skip connection (SSC) 로 구성 되어 있습니다.
 
-                             
+
+
 ### up-scale module
 
 ### reconstruction part
