--- a/_posts/2020-03-14-SAN.md
+++ b/_posts/2020-03-14-SAN.md
@@ -72,12 +72,58 @@ official implementation : [code](https://github.com/daitao/SAN)
 논문에서 RL-NL Module 은 *LR* 에서 구조적인 feature 들을 잘 따내고, *HR* 의 nature-scene 의 self-similarities 도 
 잘 가져올 거라고 합니다.
 
-구조는 channel-wise 한 self-attention network 가 residual 하게 연결되어 있는 구조입니다. (위 그림 참고)
+위치 상으로 역할이 SSRG 구조 이전/후에 사용되면서, high-level 에서 여러 넓은 범위의 정보들을 잘 catch 하는 module 이네요.
+
+논문에서 이전에 global-level non-local operation 을 사용 하는 거에 대한 한계점들을 들었는데요,
+
+1. unacceptable computational burden
+2. non-local operations at a proper neighborhood size are preferable for low-level tasks
+
+즉, global-level 에서 사용하면, feature size 가 큰 경우에 연산이 너무 heavy 해 진다는 단점과,
+주로 이런 연산들은 low-level, global-level 이 아닌 곳에서 사용되었다 라는 점인데요.
+
+그래서 이 논문에선, region-level 에서 해당 연산을 합니다. 즉 *k x k* 개의 regions 들로 나누고, 해당 region 들에 대해서 non-local operations 을 합니다.
+
+아래는 RL-NL Module 구조 사진입니다.
+
+![img](/assets/SAN/RL-NL-module.png)
 
 #### SSRG
 
 *SSRG* 는 Local Source Residual Attention Group (LSRAG) 들이 share-source skip connection (SSC) 로 구성 되어 있습니다.
 
+LSRAG Module 은 *simplified* residual blocks (w/ local-source skip connection) 들로 구성이 되어 있고, 
+feature inter-dependencies 를 잘 구하기 위한, 이 논문에서 제안한 SOCA Module 들이 붙어 있습니다.
+
+특징은 다른 SR architecture 보다 light 하게 network 를 쌓았는데, 논문에서 residual blocks 을 깊게 쌓으면 여러 가지 문제가 있을 수 있다며 
+LSRAG Module 을 기본 param 들을 사용했다고 했어요.
+
+그냥 이렇게 간단하게만 쌓으면 좋은 성능이 나올 수 없다고 하면서 share-source skip connection (SSC) 를 언급했는데요,
+SSC 사용으로 깊은 network 를 잘 훈련 시키면서 충분하게 LR 이미지로 부터 low-frequency 정보들을 잘 가져올 수 있다고 합니다.
+
+아래와 같은 convention 으로 쌓았는데, LSRAG $g$ 번 째 group 을 식으로 표현하면 이렇게 계산합니다.
+
+> $F_g = W_SSC F_0 + H_G(F_{G-1})$
+
+$W_SSC$ 는 convolution weight 인데 **0 으로 초기화**를 하고, 학습하면서 점차점차 shallow feature 들을 add 하는 방향으로 학습합니다.
+bias 는 false 네요 (~배우신 분~)
+
+결론적으로 SSRG structure 
+
+아래는 LSRAG / SOCA Module 구조 입니다.
+
+![img](/assets/SAN/LSRAG-module.png)
+
+#### Second-Order Channel Attention (SOCA)
+
+Introduction 에서 간단하게 설명은 했는데, 구체적으로 한번 다뤄볼께요.
+
+이전 channel-attention module 에서 *squeeze* stage 에선 *GAP* 등의 연산을 통해 정보를 압축했어요.
+즉, first-order statistics 이상의 정보를 고려하지 않았다는 것을 논문에서 언급합니다.
+
+* Covariance Normalization
+
+> $Y_hat = \sigma^\alpha = UA^\alphaU^T$
 
 
 ### up-scale module
