--- a/_posts/2020-03-14-SAN.md
+++ b/_posts/2020-03-14-SAN.md
@@ -121,12 +121,25 @@ Introduction 에서 간단하게 설명은 했는데, 구체적으로 한번 다
 이전 channel-attention module 에서 *squeeze* stage 에선 *GAP* 등의 연산을 통해 정보를 압축했어요.
 즉, first-order statistics 이상의 정보를 고려하지 않았다는 것을 논문에서 언급합니다.
 
-* Covariance Normalization
+##### Covariance Normalization
 
-> $Y_hat = \sigma ^ \alpha = U A^\alpha U^T$
+Covariance Normalization 를 하는 이유는, 더 discriminative representation 을 학습하는 데 중요한 역할을 한다고 하네요.
 
+간단한 연산이니, 아래 공식만 적어두겠습니다.
+
+> $Y_\hat = \sigma ^ \alpha = U A^\alpha U^T$
+
+결론적으로, $\alpha < 1$ 일 때, eigenvalues 들이 non-linear 하게 잘 동작하고, $\alpha = 1 / 2$ 일 때 제일 좋다고 하네요.
+
+이후 Channel-Attention part 는 SE operation 하고 동일합니다.
+
+즉, 연산적으로 결론은 기존 *Global Average Pooling (GAP)* 대신 *Global Covariance Pooling (GCP)* 로 바꾼겁니다.
+
+이후에 GPU 에서 EIG 를 빠르게 구하기 위해서 *Newton-Schulz iteration* 을 했다고 하는데, 이 부분은 생략하겠습니다.
 
 ### 3. up-scale module
+
+논문에서 여러 이유를 들려고 하는데, 결론은*bi-linear* up-sampling 을 사용했어요.
 
 ### 4. reconstruction part
 
