Update the review

--- a/_posts/2020-03-14-SAN.md
+++ b/_posts/2020-03-14-SAN.md
@@ -143,11 +143,42 @@ Covariance Normalization 를 하는 이유는, 더 discriminative representation
 
 ### 4. reconstruction part
 
+이 부분도 특별한 점 없이 RL-NL Module 이후 convolution layer 1 층 쌓은 구조 입니다.
+
+### Etc
+
+* Channel-Attention 때 *fc* 가 아닌 *1x1 conv2d* 로 projection 함.
+* reduction ratio 는 $r = 16$
+* 나머지 convolution 들 *kernel size = 3*, *channel = 64*
+* LSRAG Module *group = 20*
+* RL-NL $k = 2$
+* $m = 10$ residual block, single SOCA module at the tail
+
 ## Experiment Result
 
+### Set5 PSNR Performance
+
+논문에서 제안된 각 module 들을 one by one 추가 했을 때 성능 차이를 보여주는데, 확실 하게 *FOCA vs SOCA* 비교만 봐도 성능 차가 있네요.
+
+![img](/assets/SAN/SAN-psnr-performance.png)
+
+### Urban100 PSRN / SSIM Benchmark
+
+이전에 나온 다른 논문들하고 성능 비교를 해 봐도 SAN 이 확실하게 성능이 더 좋은걸 볼 수 있네요
+
+![img](/assets/SAN/SAN-performance-benchmark.png)
+
+### Computational and Parameter comparison
+
+network 규모 대비 성능을 비교해 놓은 benchmark table 인데, 꽤 괜찮은 가성비(?)를 보이네요.
+
+![img](/assets/SAN/SAN-parameter-comparison.png)
 
 ## Conclusion
 
-뭔가 attention 끝을 보려고 하는 논문이네요
+뭔가 attention 끝을 보려고 하는 논문이네요.
+
+SISR task 도 요즘 light-weight 지향하는 trend 도 많이 보이고 있는데, 
+이 쪽 연구 쪽도 재밌는 게 많이 나오면 좋겠네요.
 
 결론 : 기승전 attention
