--- a/_posts/2020-04-11-electra.md
+++ b/_posts/2020-04-11-electra.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: asdf
+title: ELECTRA: Pre-training Text Encoders as Discriminators Rather Than Generators
 author: kozistr
 categories: deep-learning
-tags: DeepLearning
+tags: DeepLearning, nlp, lm, electra, pre-trained
 use_math: true
 ---
 
