update: the post

--- a/_posts/2020-04-11-electra.md
+++ b/_posts/2020-04-11-electra.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ELECTRA: Pre-training Text Encoders as Discriminators Rather Than Generators
+title: ELECTRA Pre-training Text Encoders as Discriminators Rather Than Generators
 author: kozistr
 categories: deep-learning
 tags: DeepLearning, nlp, lm, electra, pre-trained
