update: the post

--- a/_posts/2020-04-11-electra.md
+++ b/_posts/2020-04-11-electra.md
@@ -39,14 +39,42 @@ T5 : [paper](https://arxiv.org/pdf/1910.10683.pdf)
 
 2. token ID 를 예측하는 게 아닌 discriminator 로 각 token 이 generated 됐는지 예측
 
-![img](/assets/ELECTRA/disc_gen_overview.png)
-
 3. 기존 MLM 보다 더 좋음. (small MLM, ...)
-
 
 ## Architecture
 
+### Previous Story
 
+이전 LM 들을 보면 DAE 형태로 학습을 하고 (masked input 을 복원), *BERT* 같은 경우에는 masking 때문에 example 당 token 의 15% 밖에 학습이 안돼서
+학습 비용이 꽤 컸어요.
+
+그래서 위 문제를 해결하려고 *ELECTRA*에서 replaced token detection task 를 제안했는데, 
+masking 하는 대신, 작은 MLM (masked language model ~ generator) 으로 생성된 output 으로 일부 교체 하고 discriminator 를 둬서 이게 replaced token or not 인지를 예측하게 학습했습니다.
+
+장점 으로는
+* MLM 자제가 작은걸 사용 -> 연산이 더 빨라짐
+* masked 된 부분만이 아닌 전체 token 에 대해서 discriminate -> 학습 효율 증가
+
+![img](/assets/ELECTRA/disc_gen_overview.png)
+
+### Method
+
+generator / discriminator 로 GAN 과 유사해 보이는데, 해당 network 구조만 그렇고
+실제로 *adversarial* 하게 훈련하지는 않습니다.
+
+각 network encoder 는 transformer 로 구성되어있고,
+
+generator 는 각 token 에 대한 softmax 값을 output 로 주고
+
+![img](/assets/ELECTRA/generator_output.png)
+
+discriminator 는 각 token 에 대해 replaced / not replaced 를 예측합니다.
+
+![img](/assets/ELECTRA/discriminator_output.png)
+
+### Model
+
+#### Weight Sharing
 
 ## Experiment Result
 
