update: the post

--- a/_posts/2020-04-11-electra.md
+++ b/_posts/2020-04-11-electra.md
@@ -66,7 +66,7 @@ generator / discriminator 로 GAN 과 유사해 보이는데, 해당 network 구
 
 generator 는 각 token 에 대한 softmax 값을 output 로 주고
 
-> $p_G(x_t\|x) = exp(e(x_t)^T h_G(x)_t) // \sum_{x^\dot} exp(e(x^\dot)^T h_G(x)_t$
+> $p_G(x_t\|x) = exp(e(x_t)^T h_G(x)t) / \sum_{x^\dot} exp(e(x^\dot)^T h_G(x)_t$
 
 discriminator 는 각 token 에 대해 replaced / not replaced 를 예측합니다.
 
