update: the post

--- a/_posts/2020-04-11-electra.md
+++ b/_posts/2020-04-11-electra.md
@@ -109,6 +109,16 @@ BERT-large 와 똑같은 size, 하지만 training time 은 더 오래걸림.
 
 batch size 는 2048, XLNET pre-training data 도 사용했다고 하네요. (RoBERTa 훈련할 때 사용한 데이터와 비슷)
 
+### Efficiency Analysis
+
+크게 3 가지인데
+
+1. ELECTRA 15% : discriminator loss 를 전체 token 이 아니라 masking 된 15% 에만 계산
+
+2. Replace MLM : 마스킹 할 token 을 `[MASK]` token 으로 replace 함
+
+3. All-Token MLM : 위에서 masking 된 token 을 predict, discriminator 에선 mask 에 대해서만 예측이 아닌 모든 token 에 대해 예측
+
 ## Experiment Result
 
 ### small models on the GLUE dev set
@@ -120,6 +130,10 @@ batch size 는 2048, XLNET pre-training data 도 사용했다고 하네요. (RoB
 ### SQuAD
 
 ![img](/assets/ELECTRA/squad_benchmark.png)
+
+### Efficiency
+
+![img](/assets/ELECTRA/efficiency_exp_glue_score.png)
 
 ## Conclusion
 
