update: the review

--- a/_posts/2020-04-26-yolo-v4.md
+++ b/_posts/2020-04-26-yolo-v4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: YOLOv4: Optimal Speed and Accuracy of Object Detection
+title: YOLOv4 Optimal Speed and Accuracy of Object Detection
 author: kozistr
 categories: deep-learning
 tags: DeepLearning, vision, object-detection, yolo
@@ -11,10 +11,23 @@ posted by [kozistr](http://kozistr.tech)
 
 ## tl;dr
 
-Today, i'm gonna review the paper, YOLOv4.
+이번에 리뷰할 논문은 오랜만에 나온 YOLO 4번 째 버전인 YOLOv4 논문입니다.
+
+이번 버전은 이야기가 있는(?) 버전인데, YOLO 원 저자인 Joe Redmon님 께서 올해 2월 달 쯤에 twit 으로 CV 연구를 그만 하겠다고 선언 하셨는데 (~~정말 YOLO 하러 가셨을까~~),
+과연 이번 버전엔 저자에 포함될 지, darknet page 에는 YOLOv4 가 올라갈 지 이야기가 있었는데, 이번 저자로는 빠지셨고 ㅠㅠ darknet 에는 올라갔더라고요.
+
+쨋든, 요약하면 현재 SOTA 인 EfficientDet 과 비슷한 AP 를 달성하면서 높은 FPS 를 달성했네요.
+
+paper : [arXiv](https://arxiv.org/pdf/2004.10934.pdf)
+code : [github](https://github.com/pjreddie/darknet)
 
 ## Related Work
 
+YOLO 시리즈
+
+YOLO v1 : [arXiv](https://arxiv.org/pdf/1506.02640.pdf)
+YOLO v2 : [arXiv](https://arxiv.org/pdf/1612.08242.pdf)
+YOLO v3 : [arXiv](https://pjreddie.com/media/files/papers/YOLOv3.pdf)
 
 ## Introduction
 
