--- a/_posts/2020-04-26-yolo-v4.md
+++ b/_posts/2020-04-26-yolo-v4.md
@@ -25,9 +25,9 @@ code : [github](https://github.com/pjreddie/darknet)
 
 YOLO 시리즈
 
-YOLO v1 : [arXiv](https://arxiv.org/pdf/1506.02640.pdf)
-YOLO v2 : [arXiv](https://arxiv.org/pdf/1612.08242.pdf)
-YOLO v3 : [arXiv](https://pjreddie.com/media/files/papers/YOLOv3.pdf)
+* YOLO v1 : [arXiv](https://arxiv.org/pdf/1506.02640.pdf)
+* YOLO v2 : [arXiv](https://arxiv.org/pdf/1612.08242.pdf)
+* YOLO v3 : [arXiv](https://pjreddie.com/media/files/papers/YOLOv3.pdf)
 
 ## Introduction
 
