update: the review

--- a/_posts/2020-04-26-yolo-v4.md
+++ b/_posts/2020-04-26-yolo-v4.md
@@ -113,7 +113,13 @@ regularization method 로 DropBlock 을 사용했답니다.
 
 SAT 는 구글에 찾아보세요~ (~~귀찮~~)
 
-#### 2
+#### 3
+
+SAM 에서 spatial-wise attention 을 point-wise attention 으로 변경
+PAN 에서 shortcut 을 concat 으로 변경
+
+이유는 나와있지 않은데, SAM 같은 경우엔 그 작은 parameter 몇 개 줄여보겠다는 의도인 것 같고,
+PAN 에 concat 은 성능 측면인 것 같네요. (뇌피셜)
 
 ## Summary
 
@@ -146,10 +152,23 @@ SAT 는 구글에 찾아보세요~ (~~귀찮~~)
 * Bag of Specials (Bos) for detector
   * activation : Mish
   * module : SPP, SAM, PAN
-  * metric : DIoU-NMS
+  * loss : DIoU-NMS
    
 ## Experiment Result
 
+### Bof Benchmark
+
+위에 있는 모든 요소들을 benchmark 한 표.
+
+![img](/assets/YOLOv4/bof-benchmark.png)
+
+### AP, FPS Benchmark
+
+각 GPU architecture 별로 AP, FPS benchmark 를 했는데, 아래 V100 (volta arch) 에서 테스트 한 결과.
+
+![img](/assets/YOLOv4/ap-fps-benchmark.png)
+
+빠르네요
 
 ## Conclusion
 
