update: the review

--- a/_posts/2020-05-10-cotatron.md
+++ b/_posts/2020-05-10-cotatron.md
@@ -69,9 +69,26 @@ Decoder output 으로 transcription 과 mel-spectogram 사이의 *Alignment* 가
 
 ### 2. voice conversion
 
+![img](/assets/Cotatron/voice-conversion-system.png)
+
+위 이미지처럼 voice-conversion system 인데, 전반적인 pipeline 이 그려져 있습니다.
+
+![img](/assets/Cotatron/residual_encoder_vc_decoder.png)
+
 #### 2.1 residual encoder
 
-#### 2.2 vc decoder
+speech 를 decoding 하는 과정에서 아무리 transcription + speech 에 정보가 잘 있어도 speech 자체만에 대한 정보도 다양하고 중요하기 때문에,
+해당 정보를 따로 encoding 해서 decoder 에서 사용한다고 합니다.
+
+residual encoder 의 특징은 
+
+* 위에 한 번 언급된 speaker encoder 와 비슷한 구조
+* temporal information 보존을 위해 time-wise 하게는 stride 적용 x
+* 특정 speaker feature 에 overfit 을 막기 위해 작은 channel size 를 사용. 
+* 결론적으로 single channel output 이 위 문제를 막으면서 잘 동작했다고 캅니다.
+* plus) Hann 으로 smoothing 함 ($k = 21$)
+
+#### 2.2 VC decoder
 
 ## Summary
 
