update: the review

--- a/_posts/2020-05-10-cotatron.md
+++ b/_posts/2020-05-10-cotatron.md
@@ -94,6 +94,11 @@ residual encoder 의 특징은
 
 > $M_{s \to *} = Decoder_{vc} (concat(L_s, R_s), y^{id})$
 
+VC decoder 구조는 *GAN-TTS* 란 paper 와 유사합니다. head, tail 에 1d conv 가 1 layer 씩 있고, 중간에 GBlock w/ CondBN 4 blocks 있는 형태 입니다.
+물론 CondBN 에 Condition 으로 target speaker feature 가 들어갑니다.
+
+요 decoder 에 대한 모델적인 여러 시도를 했는데 결론적으로 성능 향상은 없었다고 하면서 future works 로 남기며 턴을 종료했습니다.
+
 ## Summary
 
    
