update: the review

--- a/_posts/2020-05-10-cotatron.md
+++ b/_posts/2020-05-10-cotatron.md
@@ -99,12 +99,24 @@ VC decoder 구조는 *GAN-TTS* 란 paper 와 유사합니다. head, tail 에 1d 
 
 요 decoder 에 대한 모델적인 여러 시도를 했는데 결론적으로 성능 향상은 없었다고 하면서 future works 로 남기며 턴을 종료했습니다.
 
-## Summary
+### 3. training recipe
 
-   
+은 논문 참고 해 주세요 (~~귀찮~~)
+
 ## Experiment Result
 
+### VCTK Benchmark (many-to-many)
 
+![img](/assets/Cotatron/vctk_benchmark.png)
+
+기존 SOTA 인 Blow 보다 훨 높은 MOS, DMOS 를 보여줍니다. SCA 는 Blow 를 넘진 못헀네요.
+
+### Speaker Disentanglement
+
+![img](/assets/Cotatron/degree_of_speaker_disentanglement.png)
+
+그냥 Cotatron feature 만 쓸 때와 mel spectogram 만 따로 encoding 해서 쓴 경우와 비교 했을 때,
+SCA 가 훨 높은 걸 보여주네요.
 
 ## Conclusion
 
