update the review

--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -33,7 +33,7 @@ ResNet 계열 논문들
 
 ## Introduce
 
-introduction 에서는 크게 2가지 문제점들을 들면서 소개하는데요
+introduction 에서는 크게 2가지 문제점들을 들면서 소개하는데요,
 
 ### Computation
 
@@ -53,6 +53,8 @@ training 하려고 하면 **computation cost 가 꽤 많이 듭니다**.
 요약하면, **cross-channel representation 을 잘 뽑아주는 구조**가 필요하다 입니다.
 
 ## Architecture
+
+![img](/assets/ResNeSt/resnest-blocks.png)
 
 ## Experiment Result
 
