update the review

--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -54,7 +54,21 @@ training 하려고 하면 **computation cost 가 꽤 많이 듭니다**.
 
 ## Architecture
 
+아래는 이번 논문에서 제안한 *Split-Attention* 이 적용된 block 입니다.
+
 ![img](/assets/ResNeSt/resnest-blocks.png)
+
+왼쪽부터 순서대로 *SE-Net block*, *SK-Net block*, *ResNeSt block* 입니다.
+
+*ResNeSt* 는 *ResNeXt* 와 *SK-Net* concept 을 합친 거라 보시면 될 듯 합니다.
+
+### Split-Attention Networks
+
+*Split-Attention* block 은 크게 2가지 part 로 구성되어 있는데, *feature-map group*, *split-attention operation* 입니다.
+
+*feature-map group* 은 ResNeXt 에 나오는 concept 이니 핵심인 *split-attention* 부분만 다뤄 보겠습니다.
+
+![img](/assets/ResNeSt/split-attention-block.png)
 
 ## Experiment Result
 
