update the review

--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -71,11 +71,9 @@ training 하려고 하면 **computation cost 가 꽤 많이 듭니다**.
 ![img](/assets/ResNeSt/split-attention-block.png)
 
 1. 각 cardinal group 에서 $r$ 개의 splits 들에 대해 element-wise 하게 sum 해줍니다.
-
 > $\hat{U}^k = \sum_{j=R(k-1)+1}^{R_k} U_j$ , $\hat{U}^k \in \Bbb{R}^{H \times W \times C / K}$ for $k \in 1, ..., K$
-
 2. GAP 로 spatial features 를 squeeze 해 줍니다.
-3. *Dense $c'$ + BN * ReLU* -> *Dense $c$* 로 excitation 하고
+3. *Dense $c'$ + BN + ReLU* -> *Dense $c$* 로 excitation 하고
 5. attention feature 와 original feature 하고 element-wise 하게 mul 해 주고
 6. 마지막으로 element-wise 하게 sum 해 줍니다.
 
