update the review

--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -77,6 +77,31 @@ training 하려고 하면 **computation cost 가 꽤 많이 듭니다**.
 5. attention feature 와 original feature 하고 element-wise 하게 mul 해 주고
 6. 마지막으로 element-wise 하게 sum 해 줍니다.
 
+### ResNeSt Block
+
+위 *Split-Attention* block 들이 각 cardinal group 별로 적용된 후에 모두 concat 후에 conv 1x1 되고 skip connection 이 element-wise sum 되는 형태 입니다.
+
+만약 down-sample 되는 block 이라면 
+skip-connect 부분이 channel size alignment 를 위해 strided convolution or convolution + pooling 이 될 수 있다고 하네요.
+
+### Etc (computation, etc)
+
+network 디자인을 봤을 때 computation 적으로 training 시 이전 구현체들 보다 효율적이다 등등을 말하네요
+
+## Training Recipe
+
+요약
+
+1. average down-sampling : 이전 ResNet 들은 strided conv 3x3 w/ (zero padding) 로 pooling 함 -> avg pool 3x3 으로 pooling (zero-padding boundary 처리는 dense prediction task 에 sub-optimal 함)
+2. tweak ResNet-D : stem conv kernel size 가 7x7 -> conv 3x3 3층 (same receptive field 가지며, 더 computation 효율적으로)
+3. learning rate : lr = 0.1 로 5 epochs warm-up, cosine scheduling, $lr = B/256 * lr_base$
+4. BN : $\gamma$ = 0 으로 init
+5. label smoothing 함
+6. AutoAugment 씀
+7. MixUp 씀
+8. Large Crop Size
+9. Regularization : DropBlock (p = 0.2) 씀, l2 weight decay
+
 ## Experiment Result
 
 ## Conclusion
