--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -104,6 +104,18 @@ network 디자인을 봤을 때 computation 적으로 training 시 이전 구현
 
 ## Experiment Result
 
+### ImageNet Benchmark (ResNet based)
+
+ResNet 계열 architecture benchmark 결과인데 제일 좋은 top-1 acc 를 보입니다.
+
+![img](/assets/ResNeSt/imagenet-benchmark-resnet-based.png)
+
+### ImageNet Benchmark
+
+이전 다른 SOTA 들하고 비교해 봐도 latency / accuracy 둘다 더 좋은 성능을 보여주네용
+
+![img](/assets/ResNeSt/imagenet-benchmark.png)
+
 ## Conclusion
 
 요즘 architecture 들은 주로 baseline 구조에 AutoML 를 이용한 architecture search 가 이뤄지고 있는데,
