update the review

--- a/_posts/2020-05-23-resnest.md
+++ b/_posts/2020-05-23-resnest.md
@@ -104,17 +104,35 @@ network 디자인을 봤을 때 computation 적으로 training 시 이전 구현
 
 ## Experiment Result
 
-### ImageNet Benchmark (ResNet based)
+### ImageNet
+
+#### ResNet based Benchmark
 
 ResNet 계열 architecture benchmark 결과인데 제일 좋은 top-1 acc 를 보입니다.
 
 ![img](/assets/ResNeSt/imagenet-benchmark-resnet-based.png)
 
-### ImageNet Benchmark
+#### SOTA Benchmark
 
 이전 다른 SOTA 들하고 비교해 봐도 latency / accuracy 둘다 더 좋은 성능을 보여주네용
 
 ![img](/assets/ResNeSt/imagenet-benchmark.png)
+
+### Transfer Learning Task
+
+Downstream tasks 에서도 좋은 결과를 보이고 있습니다.
+
+#### Object-Detection Benchmark
+
+![img](/assets/ResNeSt/object-detection-benchmark.png)
+
+#### Instance Segmentation Benchmark
+
+![img](/assets/ResNeSt/instance-segmentation-benchmark.png)
+
+#### Semantic Segmentation Benchmark
+
+![img](/assets/ResNeSt/semantic-segmentation-benchmark.png)
 
 ## Conclusion
 
