--- a/_posts/2020-06-06-rpnsd.md
+++ b/_posts/2020-06-06-rpnsd.md
@@ -53,6 +53,12 @@ $x_t, y_t, z_t$ 에 대한 조건부 확률을 순서대로 보면
 * $y_t$ : assignment (speaker)
 * $z_t$ : speaker change
 
+`UIS-RNN` 에서...
+
+* **speaker change** 는 coin flipping process 로 $p_0$ 란 transition parameter 1 개로 처리 되었고
+* **speaker assignment** 는 distance dependent Chinese Restaurant Process (ddCRP) 로 bayesian non-parametric process 로 풀었고 (time domain 에서 얼마나 화자가 교차로 배치 되었는지?)
+* **sequence generation** 은 GRU (Gated Recurrent Unit) 을 사용해서 처리
+
 ## Experiment Result
 
 ## Conclusion
