--- a/_posts/2020-06-06-rpnsd.md
+++ b/_posts/2020-06-06-rpnsd.md
@@ -47,7 +47,7 @@ diarization task 를 확률 모델 적으로 아래 식으로 joint probability 
 
 이 문제를 online generative problem 으로 바꿔본다면, 식이 아래와 같이 써 볼 수 있겠죠?
 
-> $p(x_t, y_t, z_t\|x_{[t-1]}, y_{[t-1]} z_{[t-1]}) = p(x_t\|x_{[t-1]}, y_t) \dot p(y_t\|y_{[t-1]}, z_t)) \dot p(z_t\|z_{[t-1]})), (time t)$
+> $p(x_t, y_t, z_t\|x_{[t-1]}, y_{[t-1]} z_{[t-1]}) = p(x_t\|x_{[t-1]}, y_t) * p(y_t\|y_{[t-1]}, z_t)) * p(z_t\|z_{[t-1]})), (time t)$
 
 $x_t, y_t, z_t$ 에 대한 조건부 확률을 순서대로 보면 
 
