--- a/_posts/2020-02-10-StarGANv2.md
+++ b/_posts/2020-02-10-StarGANv2.md
@@ -27,13 +27,13 @@ official implementation : [code](https://github.com/clovaai/stargan-v2)
 
 아래는 관련 task 논문들인데 한번 읽어 보세요!
 
-CycleGAN : [arXiv](https://arxiv.org/pdf/1703.10593.pdf)
-DiscoGAN : [arXiv](https://arxiv.org/pdf/1703.05192.pdf)
-StarGAN : [arXiv](https://arxiv.org/pdf/1711.09020.pdf)
-MUNIT : [arXiv](https://arxiv.org/pdf/1804.04732.pdf)
-DRIT : [arXiv](https://arxiv.org/pdf/1905.01270.pdf)
-MSGAN : [arXiv](https://arxiv.org/pdf/1903.05628.pdf)
-RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
+* CycleGAN : [arXiv](https://arxiv.org/pdf/1703.10593.pdf)
+* DiscoGAN : [arXiv](https://arxiv.org/pdf/1703.05192.pdf)
+* StarGAN : [arXiv](https://arxiv.org/pdf/1711.09020.pdf)
+* MUNIT : [arXiv](https://arxiv.org/pdf/1804.04732.pdf)
+* DRIT : [arXiv](https://arxiv.org/pdf/1905.01270.pdf)
+* MSGAN : [arXiv](https://arxiv.org/pdf/1903.05628.pdf)
+* RelGAN : [arXiv](https://arxiv.org/pdf/1908.07269.pdf)
 
 ## Introduction
 
