update: the review

--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -103,6 +103,14 @@ adv loss 도 simple 한 vanilla gan loss 를 사용하네요.
 
 > $L_{style}^G = - log \frac_{exp(s^' * s^~ / \unicode{932})}{\sum_{i=0}^N exp(s^' * s_{i}^- / \unicode{932})}$
 
+$s^' = E_{style}(G(x, s^~))$, $s^'$ 는 생성된 이미지에 대한 style 이고 (positive), - 는 negative style.
+
+위 loss function 을 사용하면 ref image x 에 대해 생성된 이미지가 유사해 지니 (positive 는 유사, negative 는 안유사),
+guiding network E 가 모든 이미지를 하나의 style code 로 뽑는 것도 막을 수 있겠죠. (여기서 only recon loss 만 사용할 때 문제)
+
+#### Reconstruction Loss
+
+여기도 특별한 건 없고 image x 와 해당 style s 에 대해 생성된 이미지와의 L1 loss 를 minimize 합니다.
 
 ## Experiment Result
 
