update: the review

--- a/_posts/2020-06-16-tunit.md
+++ b/_posts/2020-06-16-tunit.md
@@ -69,17 +69,17 @@ Image-to-Image Translation 쪽 papers 이 정도만
 그리고 다른 unsupervised method 에서 주로 사용하는 방식인 augmentation (e.g) random cropping, horizontal flip, ....)을 통해서 각 domain 의 cluster 를 학습하는데, 
 여기서 mutual information (MI) 를 maximize 하는 방식으로 진행하게 됩니다.
 
-> $I(p,p^+) = H(p) - H(p|p^+), p = E_{class}(x)$
+> $I(p,p^+) = H(p) - H(p\|p^+)$, $p = E_{class}(x)$
 
 여기서 image $x$ 라 하면, $x^+$ 는 augmented image $x$ 이고, $p$ K domains 에 대한 확률 값이라 볼 수 있겠습니다. (softmax 가 정확히는 확률 값은 아니지만)
 
-$entropy H(p)$ 가 maximize, $cond entropy H(p|p^+)$ 가 minimize 되면서, 
+$entropy H(p)$ 가 maximize, $cond entropy H(p\|p^+)$ 가 minimize 되면서, 
 결과적으로 해당 MI 가 maximize 되면, 모든 samples 들이 K domains 에 골고루 분포되면서,
 augmented 된 domain 들에 대해선 같은 domain 으로 묶겠죠?
 
 위 공식을 entropy loss scheme 으로 다시 써 보면 아래처럼 됩니다.
 
-> $L_{MI} = I(p,p^+) = I(P) = \sum_{i=1}^K \sum_{j=1}^K P_{ij} ln \frac_{P_ij}{P_i P_j}$, $P_{ij} = P(p = i, p^+ = j)$
+> $L_{MI} = I(p,p^+) = I(P) = \sum_{i=1}^K \sum_{j=1}^K P_{ij} ln \frac_{P_{ij}}{P_{i}P_{j}}$, $P_{ij} = P(p = i, p^+ = j)$
 
 #### Improving Domain Classification
 
